docs/docs/2.x/en/guide/usage/custom-components.mdx
import { Tab, Tabs } from '@rspress/core/theme';

# Custom Components

`react-native-gesture-image-viewer` offers powerful complete component customization. You can create gesture-supported items with not only images but any component you want.

## Modal Components

You can create a viewer using any `Modal` of your choice as shown below:

<Tabs>
  <Tab label="Use Modal">
    ```tsx
    import { FlatList, Image, Modal } from 'react-native';
    import { GestureViewer } from 'react-native-gesture-image-viewer';

    function App() {
      const images = [...];
      const [visible, setVisible] = useState(false);

      return (
        <Modal visible={visible} onRequestClose={() => setVisible(false)}>
          <GestureViewer
            data={images}
            renderItem={renderImage}
            ListComponent={FlatList}
            onDismiss={() => setVisible(false)}
          />
        </Modal>
      );
    }
    ```

  </Tab>
  <Tab label="Use react-nativee-modal">
    ```tsx
    import { FlatList, Image } from 'react-native';
    import Modal from 'react-native-modal';
    import { GestureViewer } from 'react-native-gesture-image-viewer';

    function App() {
      const images = [...];
      const [visible, setVisible] = useState(false);

      return (
        <Modal
          isVisible={visible}
          onBackButtonPress={() => setVisible(false)}
          onBackdropPress={() => setVisible(false)}
          hasBackdrop={false}
          style={styles.modal}
          useNativeDriver={true}
          hideModalContentWhileAnimating={true}
          animationInTiming={300}
          animationOutTiming={300}
        >
          <GestureViewer
            data={images}
            renderItem={renderImage}
            ListComponent={FlatList}
            onDismiss={() => setVisible(false)}
          />
        </Modal>
      );
    }
    ```

  </Tab>
</Tabs>

## List Components

Support for any list component like `ScrollView`, `FlatList`, [`FlashList`](https://shopify.github.io/flash-list/) through the `ListComponent` prop.  
The `listProps` provides **type inference based on the selected list component**, ensuring accurate autocompletion and type safety in your IDE.

```tsx
import { FlashList } from '@shopify/flash-list';

function App() {
  return (
    <GestureViewer
      data={images}
      ListComponent={FlashList}
      listProps={
        {
          // ✅ FlashList props autocompletion
        }
      }
    />
  );
}
```

## Content Components

You can inject various types of content components like [`expo-image`](https://docs.expo.dev/versions/latest/sdk/image/), [`FastImage`](https://github.com/DylanVann/react-native-fast-image), etc., through the `renderItem` prop to use gestures.

```tsx
import { useCallback } from 'react';
import { Image } from 'expo-image';
import { GestureViewer } from 'react-native-gesture-image-viewer';

const images = [
  { uri: 'https://picsum.photos/400/200', width: 400, height: 200 },
  { uri: 'https://picsum.photos/200/400', width: 200, height: 400 },
];

function getImageDimensions(image: (typeof images)[number]) {
  return { width: image.width, height: image.height };
}

function App() {
  const renderImage = useCallback((image: (typeof images)[number]) => {
    return (
      <Image
        source={{ uri: image.uri }}
        style={{ width: '100%', height: '100%' }}
        contentFit="contain"
      />
    );
  }, []);
  return (
    <GestureViewer data={images} renderItem={renderImage} getItemDimensions={getImageDimensions} />
  );
}
```

## Content Dimensions

For `contain`-fitted content, pass the natural/source dimensions when you can. This lets the viewer keep pan and double-tap zoom bounds aligned to the visible content edge instead of the full viewer cell.

Use one of these paths:

- Use `getItemDimensions` when the dimensions are already known from your data.
- Use `setItemDimensions` from `renderItem` when the dimensions are only available after the image loads.
- Pair `getItemKey` with the runtime `setItemDimensions` path when the same logical item can be recreated as a new object in the same slot.
- Omit both to keep the legacy fallback, which uses the full viewer cell as the content size.

### React Native Image

```tsx
import { Image } from 'react-native';
import type { GestureViewerRenderItemInfo } from 'react-native-gesture-image-viewer';

function renderImage(
  uri: string,
  _index: number,
  { setItemDimensions }: GestureViewerRenderItemInfo,
) {
  return (
    <Image
      source={{ uri }}
      style={{ width: '100%', height: '100%' }}
      resizeMode="contain"
      onLoad={({ nativeEvent }) => {
        setItemDimensions({
          width: nativeEvent.source.width,
          height: nativeEvent.source.height,
        });
      }}
    />
  );
}
```

### Expo Image

```tsx
import { Image } from 'expo-image';
import type { GestureViewerRenderItemInfo } from 'react-native-gesture-image-viewer';

function renderImage(
  uri: string,
  _index: number,
  { setItemDimensions }: GestureViewerRenderItemInfo,
) {
  return (
    <Image
      source={{ uri }}
      style={{ width: '100%', height: '100%' }}
      contentFit="contain"
      onLoad={(event) => {
        setItemDimensions({
          width: event.source.width,
          height: event.source.height,
        });
      }}
    />
  );
}
```

### FastImage

```tsx
import FastImage from 'react-native-fast-image';
import type { GestureViewerRenderItemInfo } from 'react-native-gesture-image-viewer';

function renderImage(
  uri: string,
  _index: number,
  { setItemDimensions }: GestureViewerRenderItemInfo,
) {
  return (
    <FastImage
      source={{ uri }}
      style={{ width: '100%', height: '100%' }}
      resizeMode={FastImage.resizeMode.contain}
      onLoad={({ nativeEvent }) => {
        setItemDimensions({
          width: nativeEvent.width,
          height: nativeEvent.height,
        });
      }}
    />
  );
}
```

<span id="renderitem-active-state" />

### `renderItem` active state (`isActive`)

For content such as video that should play or perform work only while it is visible, use `isActive` from the third `renderItem` argument. It is `true` only for the currently selected content. During a page transition, the previous content remains active; when the move finishes, the newly selected content becomes active. Use [`useGestureViewerState`](/guide/usage/gesture-viewer-state) instead when UI outside the item needs the global `currentIndex`.

```tsx
import type { GestureViewerRenderItemInfo } from 'react-native-gesture-image-viewer';

function renderMedia(item: MediaItem, _index: number, { isActive }: GestureViewerRenderItemInfo) {
  return (
    <Video
      source={{ uri: item.uri }}
      style={{ width: '100%', height: '100%' }}
      paused={!isActive}
      resizeMode="contain"
    />
  );
}

return <GestureViewer data={mediaItems} renderItem={renderMedia} />;
```
